# byod-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  test.txt
.github/workflows/: auto-tag.yml  publish.yml  test.yml
scripts/: build_ui.sh  release.sh
src/byod_cli/: __init__.py  api_client.py  cli.py  config.py  encryption.py  key_manager.py  s3_client.py  utils.py  validation.py
src/byod_cli/commands/: __init__.py  _helpers.py  auth.py  config.py  jobs.py  misc.py  plugins.py  setup.py
src/byod_cli/ui/: __init__.py  server.py
src/byod_cli/ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/byod_cli/ui/frontend/src/: index.css  main.tsx
src/byod_cli/ui/frontend/src/animations/: variants.ts
src/byod_cli/ui/frontend/src/components/: ErrorBoundary.tsx  FileDropZone.tsx  Layout.tsx  LogViewer.tsx  ProgressTracker.tsx  SecurityBanner.tsx  Skeleton.tsx  StatusBadge.tsx
src/byod_cli/ui/frontend/src/hooks/: useApi.ts  useSSE.ts
src/byod_cli/ui/frontend/src/pages/: Home.tsx  JobDetail.tsx  Jobs.tsx  Settings.tsx  SetupWizard.tsx  Submit.tsx
src/byod_cli/ui/routes/: __init__.py  jobs.py  plugins.py  settings.py  setup.py  status.py  submit.py
src/byod_cli/ui/static/: index.html
src/byod_cli/ui/static/assets/: Home-Bz3KlDyA.js  Home-DTSahITe.js  Home-DnGbYOYi.js  Home-lapW95XP.js  JobDetail-BjlavOmt.js  JobDetail-CHF8f50J.js  JobDetail-CIv6G8MT.js  JobDetail-CMqc9a8K.js  Jobs-B7NJFaeg.js  Jobs-BbTMht_d.js  Jobs-C4sIpmnk.js  Jobs-DSdpvmS4.js  ProgressTracker-4PGVOIMw.js  ProgressTracker-CYi14fur.js  ProgressTracker-CtiyfszE.js  ProgressTracker-p4Qyc5Kl.js  Settings-48XV8kmW.js  Settings-BuYlMnLu.js  Settings-DuBLYE0U.js  Settings-NlqPsF2Y.js  SetupWizard-BEbIeHvk.js  SetupWizard-Bx72_URx.js  SetupWizard-CZMDJYXQ.js  SetupWizard-TSA0YE2C.js  Skeleton-BAQGCEbE.js  Skeleton-CeN7a-3a.js  Skeleton-Cg_dwXAZ.js  StatusBadge-CD4kIfB2.js  StatusBadge-CPNlcQHy.js  StatusBadge-CWIYn1ry.js  StatusBadge-Cx-ICf0Y.js  Submit-BAk4ABp6.js  Submit-BbhMDhxH.js  Submit-CiH5yAmB.js  Submit-D_bZTMOo.js  index-B8SBTCI8.js  index-CFbSZbwz.css  index-DPprMCNG.js  index-DQXeUXaV.css  index-DeILZAvC.css  (+3 more)
tests/: conftest.py
tests/unit/: test_api_client.py  test_api_client_extended.py  test_cli_commands.py  test_cli_crypto.py  test_cli_retrieve_decrypt.py  test_cli_setup.py  test_cli_submit.py  test_cli_ux.py  test_config.py  test_encryption.py  test_encryption_paths.py  test_key_manager.py  test_s3_client.py  test_ui_jobs.py  test_ui_plugins.py  test_ui_settings.py  test_ui_setup.py  test_ui_status.py  test_ui_submit.py  test_utils.py  test_validation.py
